alignment fixes

--- a/web/css/footer.css
+++ b/web/css/footer.css
@@ -2,7 +2,6 @@ footer {
   width: 100%;
   background-color: #333;
   border-top: 1px solid #555;
-  position: fixed;
   bottom: 0px;
   height: 40px;
 }
